--- a/Pipfile
+++ b/Pipfile
@@ -1,5 +1,5 @@
 [[source]]
-url = "https://pypi.python.org/simple"
+url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
 
@@ -9,6 +9,7 @@ pyserial = "*"
 
 [dev-packages]
 neovim = "*"
+versioneer = "*"
 
 [requires]
 python_version = "3.6"
